# KempnerForge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codebase-map.json  next_features.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench_data.py  bench_forward.py  bench_moe.py  bench_optimizer.py  runner.py
benchmarks/config_validation/: config_validation.md  config_validation_2026-04-06.md
benchmarks/mfu_scaling/: mfu_bench.sh  mfu_scaling.md  mfu_scaling_2026-04-05.md
benchmarks/moe_expert_parallel/: moe_ep_bench.sh  moe_ep_benchmark.md
benchmarks/moe_packed/: moe_packed_bench.sh  moe_packed_benchmark_2026-04-13.md  parse_results.py  retry_e64.sh
benchmarks/profiling/: 13b_24gpu_profiling.md
configs/cluster/: .gitignore  kempner.toml  local.toml.example
configs/model/: llama_13b.toml  llama_70b.toml  llama_7b.toml  moe_small.toml
configs/train/: 13b_24gpu_validation.toml  13b_32gpu_tp4_pp2.toml  29b_32gpu_tp4_pp2.toml  70b_32gpu_tp4.toml  70b_32gpu_tp4_pp4.toml  7b.toml  7b_12gpu_tp4.toml  7b_16gpu_adamw.toml  7b_16gpu_fp8.toml  7b_16gpu_muon.toml  7b_32gpu_fsdp.toml  debug.toml  debug_moe.toml  default.toml  hf_wikitext.toml  llama7b_bench.toml  moe_24gpu.toml  moe_8gpu_stress.toml  moe_ep_32gpu.toml  multinode_13b_tp4_pp2_fsdp4.toml  multinode_29b_tp4_pp2_fsdp4.toml  multinode_70b_tp4_fsdp8.toml  multinode_70b_tp4_pp2_fsdp4.toml  multinode_tp4_fsdp3.toml  vlm_7b.toml  vlm_7b_ac.toml  vlm_7b_cross_attn.toml  vlm_7b_freeze_schedule.toml  vlm_7b_moma.toml  vlm_7b_mot.toml  vlm_7b_siglip2.toml  vlm_7b_siglip2_cross_attn.toml  vlm_debug.toml  vlm_debug_moe.toml  vlm_debug_moma.toml  vlm_debug_mot.toml  vlm_video_webvid.toml  wikitext_test.toml
docs/: Makefile  claude-ready.md  conf.py  contributing.md  index.md
docs/api/: index.md
docs/architecture/: data-flow.md  index.md  model.md  parallelism-order.md
docs/checkpointing/: auto-resume.md  dcp-model.md  hf-conversion.md  index.md  resharding.md  train-state.md
docs/configuration/: cli-overrides.md  config-sections.md  index.md  registry.md  validation-rules.md
docs/data/: huggingface.md  index.md  memory-mapped.md  mixing-and-annealing.md  sampler.md  stateful-dataloader.md
docs/distributed/: device-mesh.md  expert-parallelism.md  fp8.md  fsdp2.md  index.md  pipeline-parallelism.md  tensor-parallelism.md
docs/getting-started/: first-training-run.md  index.md  install.md  notebooks.md  quickstart.md
docs/how-to/: build-a-model.md  compare-optimizers.md  data-mixing-annealing.md  debug-training-regressions.md  end-to-end-training-run.md  fp8-training.md  generate-from-checkpoint.md  index.md  mechanistic-interpretability.md  moe-experiments.md  prepare-tokenized-data.md  run-evaluation.md  run-vlm-evaluation.md  scaling-guide.md  slurm-distributed-setup.md  train-on-video.md
docs/metrics-and-profiling/: index.md  memory-monitor.md  metrics-tracker.md  mfu.md  profiler.md  tensorboard.md  wandb.md
docs/moe/: aux-loss-and-balancing.md  capacity-and-dispatch.md  index.md  moe-fp8.md  routers.md
docs/reference/: available-configs.md  benchmarks.md  environment-variables.md  index.md  parallelism-recipes.md
docs/resilience/: elastic.md  gpu-health.md  index.md  nan-detection.md  nccl-liveness.md  slurm-preemption.md
docs/training/: evaluation.md  generation.md  gradient-utilities.md  hooks.md  index.md  losses.md  optimizers.md  schedulers.md  training-loop.md
examples/: custom_hook.py  quickstart.md
examples/notebooks/: 01_inspect_model.ipynb  02_attention_visualization.ipynb  (+5 more)
kempnerforge/: README.md  __init__.py
scripts/: check_env.py  convert_checkpoint.py  eval.py  eval_harness.py  generate.py  prep_vlm_coco.py  prep_vlm_coco_smoke.py  prepare_data.py  profile_run.py  srun_launch.sh  train.py  vlm_eval_harness.py
tests/: conftest.py
(+182 files in other folders)
